Removed usages of sun.misc.BASE64[Encoder,Decoder]
Those are JDK internal classes and not part of the public API.
Used java.util.Base64 instead.